# wikimem

./: AGENTS.md  CHANGELOG.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json
.github/: release-please-config.json
.github/workflows/: lint-js.yml  publish.yml  release-please.yml
scripts/: generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mcp.rs  memory.rs
src/app/: layout.tsx  page.tsx
src/components/: MemoryWorkspace.tsx  memory-api.ts  memory-editor-pane.tsx  memory-link-plugin.tsx  memory-list-panel.tsx  memory-markdown.ts  memory-node.ts  memory-types.ts  memory-utils.ts  memory-workspace.tsx  rounded-button.tsx
src/components/editor/: auto-save-plugin.tsx  memory-editor-pane.tsx  memory-link-plugin.tsx  memory-markdown.ts  memory-node.ts  memory-workspace.tsx
src/components/memory/: home-memory-browser.tsx  mcp-instructions-dialog.tsx  memory-editor-pane.tsx  memory-link-plugin.tsx  memory-list-panel.tsx  memory-markdown.ts  memory-node.ts  memory-results-view.tsx  memory-workspace.tsx
src/components/navigation/: mcp-instructions-dialog.tsx  memory-list-panel.tsx  memory-results-view.tsx
src/components/ui/: dialog.tsx
src/hooks/: use-memory-results.ts  use-recent-memories.ts
src/lib/: tauri-commands.ts  types.ts  utils.ts
src/styles/: globals.css
