[package]
name = "wikimem"
version = "0.1.0"
description = "A wiki editor for LLM memories"
authors = ["nyvyn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wikimem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
rmcp = { version = "0.10.0", features = ["server", "transport-streamable-http-server"] }
axum = { version = "0.8.7", features = ["http1", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.4", features = ["devtools"] }
tauri-plugin-opener = "2.5.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time"] }
# Needed for linting in GH actions
rustix = { version = "1.1.2", features = ["std", "fs", "process"], default-features = false }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
